--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,12 +1,187 @@
 $header-color: #ed1c24;
+$link-color: #fff;
+$link-font: sans-serif;
+$footer-color: #0f1426;
+$content-height: 550px;
+$rate-color: #ffcc33;
 
 html,body{
     margin:0px;
     padding:0px;
 }
 
-header{
-    padding:40px;
-    background: $header-color;
 
+header{
+    background: $header-color;
+    display: flex;
+    padding:0px 100px;
+    .logo{
+        width:35%;
+        padding:20px 0px;
+    }
+    .menu {
+        width: 65%;
+        nav{
+            float: right;
+            display: block;
+            height: 100%;
+        }
+        .submenu{
+            display: none;
+        }
+        ul{
+            list-style: none;
+            margin: 0px;
+            li{
+                font-family: $link-font;
+                color: $link-color;
+                float: left;
+                padding: 10px;
+                text-decoration: none;
+                text-transform: uppercase;
+                padding: 45px 20px;
+                &:hover{
+                    background:$link-color;
+                    a{
+                        color:$header-color;
+                    }
+                    i{
+                        color:$header-color;
+                    }
+                }
+                a{
+                    color: $link-color;
+                    text-decoration: none;
+                }
+            } 
+        }
+    }
+}
+.carousel{
+    .background{
+        min-height: $content-height;
+        background: url('../images/movie-poster.jpg') no-repeat;
+        background-size:cover;
+        filter: blur(50px);
+        overflow: hidden;
+        padding:0px 100px;
+        width: 100%;
+        height:100%;
+        position: fixed;
+        top: 0px;
+        z-index: -1;
+    }
+    .movie{
+        min-height: $content-height;
+        overflow: hidden;
+        padding:0px 100px;
+        background-color:rgba(242, 194, 249, 0.23);
+        .poster{
+            margin:20px 0px;
+            float: left;
+            width:50%;
+            height: $content-height;
+            background: url('../images/movie-poster.jpg') no-repeat;
+        }
+        .movie-details{
+            float: left;
+            color: $link-color;
+            font-family: sans-serif;
+            text-transform: uppercase;
+            width: 50%;
+            .hd{
+                background: $rate-color;
+                border-radius:2px;
+                padding:2px;
+                font-size:16px;
+            }
+            ul{
+                text-decoration: none;
+                list-style: none;
+                padding-left: 0px;
+                width: 100%;
+                float: left;
+                margin: 0;
+                li{
+                    float: left;
+                    padding:2px 5px;
+                    border-left:1px solid $link-color;
+                    &:first-child{
+                        border-left:0px;
+                    }
+                }
+                
+            }
+            h1{
+                font-size:32px;
+            }
+            h4{
+                font-size: 16px;
+            }
+            p{
+                font-size: 13px;
+            }
+            .rate-share{
+                width:100%;
+                .rating{
+                    width:50%;
+                    float: left;
+                    .rated{
+                        color:$rate-color;
+                    }
+                }
+                .share{
+                    width:50%;
+                    float: right;
+                }
+            }
+            .play{
+                background: $header-color;
+                padding: 10px 40px;
+                color: $link-color;
+                font-size: 14px;
+            }
+        }
+    }
+    .nav {
+        width: 200px;
+        height: 100%;
+        // background: #fff;
+        position: absolute;
+        z-index: 1;
+        height: $content-height;
+    }
+    .nav.arr-right{
+            right:0px;
+            font-size: 70px;
+            font-weight: 100;
+            color: #fff;
+            padding-right: 20px;
+            i{
+                float:right;
+                margin-top: 225px;
+            }
+            
+            
+        }
+    .nav.arr-left{
+            left:0px;
+            font-size: 70px;
+            font-weight: 100;
+            color: #fff;
+            padding-left: 20px;
+            i{
+                float:left;
+                margin-top: 225px;
+            }
+        }
+}
+
+
+
+
+footer{
+    background: $footer-color;
+    padding: 20px;
+    
 }
